[tool.poetry]
name = "quickping"
version = "0.0.2"
description = "Quickping Client Library"
authors = ["Todd Sifleet <todd@smartfast.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
appdaemon = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"